Add 'Cartographer' subclass to Artificer class

--- a/index.html
+++ b/index.html
@@ -765,7 +765,7 @@ const SKILLS_DATA=[
   {name:'Sleight of Hand',ab:'DEX'},{name:'Stealth',ab:'DEX'},{name:'Survival',ab:'WIS'}
 ];
 const CLASS_DATA={
-  Artificer:{hd:8,saves:['CON','INT'],spellAb:'INT',subs:['Alchemist','Armorer','Artillerist','Battle Smith'],isHalf:true},
+  Artificer:{hd:8,saves:['CON','INT'],spellAb:'INT',subs:['Alchemist','Armorer','Artillerist','Battle Smith', 'Cartographer'],isHalf:true},
   Barbarian:{hd:12,saves:['STR','CON'],spellAb:null,subs:['Berserker','Totem Warrior','Storm Herald','Zealot','Ancestral Guardian','Wild Magic','Beast']},
   Bard:{hd:8,saves:['DEX','CHA'],spellAb:'CHA',subs:['Lore','Valor','Glamour','Swords','Eloquence','Creation','Spirits']},
   Cleric:{hd:8,saves:['WIS','CHA'],spellAb:'WIS',subs:['Life','Light','Trickery','Knowledge','War','Nature','Tempest','Death','Forge','Grave','Order','Peace','Twilight']},
